# haskell-projekt

./: DBconnection.hs  README.md  create.sql  drop.sql  haskell-projekt.cabal  insert.sql  trigger.sql
DB/: query.sql
haskell-projekt/src/: DBconnection.hs  Main.hs
haskell-projekt/views/: index.html
haskell-projekt/views/styles/: style.css
src/: DBconnection.hs  Main.hs  Utils.hs
views/: index.html
views/scripts/: script.js
views/styles/: style.css
